Final Version for Website Interface

--- a/software/web/templates/add-user.html
+++ b/software/web/templates/add-user.html
@@ -19,11 +19,11 @@
             <table class="outer-border-remove force-border-remove edit-user-table" style="width: 75%">
                 <td style="width: 50%">
                     <p><span style="font-size: 14pt;"><u>User Information</u></span></p>
-                    <p>ID <span style="color: red">*</span><br/><input style="width: 75%; text-align: center;" type="text" name="id" value="{{next_id}}" disabled></p>
-                    <p>Username <span style="color: red">*</span><br/><input style="width: 75%; text-align: center;" type="text" name="username" placeholder="Username" value="{{username if user}}"></p>
-                    <p>Email <span style="color: red">*</span><br/><input style="width: 75%; text-align: center;" type="email" name="email" placeholder="Email"></p>
-                    <p>First Name <span style="color: red">*</span><br/><input style="width: 75%; text-align: center;" type="text" name="firstname" placeholder="First Name"></p>
-                    <p>Last Name <span style="color: red">*</span><br/><input style="width: 75%; text-align: center;" type="text" name="lastname" placeholder="Last Name"></p>
+                    <p>ID <span style="color: red">*</span><br/><input class="form-control form-control-sm" style="width: 75%; text-align: center;" type="text" name="id" value="{{next_id}}" autocomplete="off" disabled></p>
+                    <p>Username <span style="color: red">*</span><br/><input class="form-control form-control-sm" style="width: 75%; text-align: center;" type="text" name="username" placeholder="Username" value="{{username if user}}" autocomplete="off"></p>
+                    <p>Email <span style="color: red">*</span><br/><input class="form-control form-control-sm" style="width: 75%; text-align: center;" type="email" name="email" placeholder="Email" value="{{email if email}}" autocomplete="off"></p>
+                    <p>First Name <span style="color: red">*</span><br/><input class="form-control form-control-sm" style="width: 75%; text-align: center;" type="text" name="firstname" placeholder="First Name" value="{{first_name if first_name}}" autocomplete="off"></p>
+                    <p>Last Name <span style="color: red">*</span><br/><input class="form-control form-control-sm" style="width: 75%; text-align: center;" type="text" name="lastname" placeholder="Last Name" value="{{last_name if last_name}}" autocomplete="off"></p>
                 </td>
                 <td>
                     <p><span style="font-size: 14pt;"><u>Status</u></span></p>
