--- a/software/web/templates/change-password.html
+++ b/software/web/templates/change-password.html
@@ -6,6 +6,8 @@
 <head>
     <link rel="shortcut icon" type="image/png" href="static\pictures\SUS-Logo-Fav4.png">
 </head>
+
+<body>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for msg in messages %}
@@ -13,10 +15,19 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-<form action="#" method="post" style="text-align: center">
-    <p>Old Password<br/><input style="width: 25%;" type="password" name="oldpass" placeholder="Old Password"></p>
-    <p>New Password<br/><input style="width: 25%;" type="password" name="newpass" placeholder="New Password"></p>
-    <p>New Password<br/><input style="width: 25%;" type="password" name="renewpass" placeholder="Retype New Password"></p>
-    <p><button class="btn btn-danger" type="submit">Change Password</button></p>
-</form>
+    <b><u>Password Requirements</u></b>
+    <ul>
+        <li>Password Length must be more than 8 characters.</li>
+        <li>At least one lowercase and one uppercase.</li>
+        <li>At least two special characters of the following: <code>$</code>, <code>&</code>, <code>#</code>, <code>!</code>. Must not contain any other special characters.</li>
+        <li>At least 2 numbers.</li>
+    </ul>
+    <hr style="border-bottom: 1px solid white;"/>
+    <form action="#" method="post">
+        <p>Old Password<br/><input class="form-control form-control-sm" style="width: 25%;" type="password" name="oldpass" placeholder="Old Password"></p>
+        <p>New Password<br/><input class="form-control form-control-sm" style="width: 25%;" type="password" name="newpass" placeholder="New Password"></p>
+        <p>New Password<br/><input class="form-control form-control-sm" style="width: 25%;" type="password" name="renewpass" placeholder="Retype New Password"></p>
+        <p><button class="btn btn-danger" type="submit">Change Password</button></p>
+    </form>
+</body>
 {% endblock %}
