--- a/software/web/templates/error404.html
+++ b/software/web/templates/error404.html
@@ -8,9 +8,9 @@
 </head>
 
 <center>
-    <div style="font-size: 84pt; line-height: 1;">⚠️</div>
+    <img src="static\pictures\Warning Icon.png" height="200px" width="200px"/>
     <div style="line-height: 1.75;">
-        <div style="font-size: 48pt">Page does not exist.</div>
+        <div style="font-size: 36pt">Page does not exist.</div>
         <div style="font-size: 16pt">Click <a href="home">here</a> to go back to the homepage.</div>
     </div>
 </center>
